--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "gplately" %}
-{% set version = "1.1" %}
+{% set version = "1.2.5" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/gplately-{{ version }}.tar.gz
-  sha256: 6de318befd456d78d6e9fa5fae9d522d9b8bc43ff6e00b59ace9962cb4b7dee3
+  sha256: 9d5d3a1632444c2d6ae83fd4b1307c18e109e26d7d3e3879191b912e4b911d6f
 
 build:
   noarch: python
@@ -26,13 +26,13 @@ requirements:
     - shapely
     - matplotlib-base
     - cartopy
-    - platetectonictools
     - pooch
     - tqdm
     - netcdf4
     - rasterio
     - geopandas
     - stripy
+    - plate-model-manager
 
 test:
   imports:
@@ -53,3 +53,4 @@ extra:
   recipe-maintainers:
     - brmather
     - jcannon-gplates
+    - michaelchin
