--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,12 +12,15 @@ source:
 build:
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
-  number: 1
+  number: 2
 
 requirements:
   host:
     - python {{ python_min }}
     - pip
+    - setuptools >=61.0.0
+    - wheel
+    - setuptools-git-versioning
   run:
     - python >={{ python_min }}
     - numpy >=1.16.0
