--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 build:
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
-  number: 1 
+  number: 2 
 
 requirements:
   host:
@@ -36,6 +36,7 @@ requirements:
     - geopandas
     - stripy
     - plate-model-manager >=1.2.2
+    - pyyaml
 
 test:
   imports:
@@ -46,6 +47,7 @@ test:
     - pip
     - pytest
     - python {{ python_min }}
+    - pyyaml
 
 about:
   home: https://github.com/GPlates/gplately
