--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,7 +25,7 @@ requirements:
     - python >={{ python_min }}
     - numpy >=1.16.0
     - scipy >=1.0.0
-    - pygplates >=1.0.0
+    - pygplates >=1.0.0rc1
     - shapely
     - matplotlib-base
     - cartopy
