--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,7 +23,7 @@ requirements:
     - setuptools-git-versioning
   run:
     - python >={{ python_min }}
-    - numpy >=1.16.0
+    - numpy >=1.16.0,<2.0a0
     - scipy >=1.0.0
     - pygplates >=1.0.0rc1
     - shapely
