--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 build:
   noarch: python
   script: {{ PYTHON }} -m pip install . -vv
-  number: 2 
+  number: 0 
 
 requirements:
   host:
@@ -25,7 +25,7 @@ requirements:
     - python >={{ python_min }}
     - numpy >=1.16.0,<2.0a0
     - scipy >=1.0.0
-    - pygplates >=1.0.0rc1
+    - pygplates >=1.0.0
     - shapely
     - matplotlib-base
     - cartopy
